--- a/_data/seriestitles.yml
+++ b/_data/seriestitles.yml
@@ -26,6 +26,7 @@ overboard:
   subtitle: Sometimes I get way too in to a topic.
 writing:
   title: Writing
+  subtitle: On effective use of the written word.
 iosdev:
   title: Making iOS Apps
 warstory:
