--- a/_data/seriestitles.yml
+++ b/_data/seriestitles.yml
@@ -13,6 +13,9 @@ best:
 products:
   title: Making Great Products
   subtitle: Interesting aspects of product development.
+projects:
+  title: Effective Projects
+  subtitle: The art and science of shipping.
 personal:
   title: Moments in a Life
   subtitle: Some of the more interesting things I've experienced.
