--- a/_data/seriestitles.yml
+++ b/_data/seriestitles.yml
@@ -17,8 +17,8 @@ projects:
   title: Effective Projects
   subtitle: The art and science of shipping.
 personal:
-  title: Moments in a Life
-  subtitle: Some of the more interesting things I've experienced.
+  title: Life-Sized Lessons
+  subtitle: Some of the more interesting moments I've experienced.
 justly:
   title: Trying to Live Justly
   subtitle: On doing our best to do better.
