Labelled forestwalk tag

--- a/_data/seriestitles.yml
+++ b/_data/seriestitles.yml
@@ -47,3 +47,5 @@ choosing:
 startups:
   title: Growing Startups
   subtitle: Approaches, failures, and lessons in making a new business work.
+forestwalk:
+  title: Forestwalk
