--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@11ty/eleventy": "^3.1.2",
     "js-yaml": "^4.1.1",
     "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-footnote": "^4.0.0"
   }
 }
