--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "eleventy --watch",
     "clean": "rm -rf _site"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
     "js-yaml": "^4.1.1",
