--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
+    "cheerio": "^1.1.2",
     "js-yaml": "^4.1.1",
+    "linkedom": "^0.18.12",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
-    "markdown-it-footnote": "^4.0.0"
+    "markdown-it-footnote": "^4.0.0",
+    "smartquotes": "^2.3.2"
   }
 }
