Fixed blockquote formatting.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Allen Pike's personal website",
   "scripts": {
     "build": "eleventy",
-    "serve": "eleventy --serve",
-    "watch": "eleventy --watch",
+    "dev": "eleventy --serve",
     "clean": "rm -rf _site"
   },
   "engines": {
@@ -18,6 +17,7 @@
     "linkedom": "^0.18.12",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
+    "markdown-it-attrs": "^4.3.1",
     "markdown-it-footnote": "^4.0.0",
     "smartquotes": "^2.3.2"
   }
